ref #628, localized notifications no longer break the layout

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -20,6 +20,7 @@
   --font-size: 16px;
   --font-line-height: 1.2;
 
+  // defined in Figma here: https://www.figma.com/file/cAd46zJb6H7mW7W14iLsDe/MDN-Basic-Components?node-id=299%3A311
   --type-heading-l: 600 1rem/1.1875 var(--font-heading); /* 16px/19px, h5 */
   --type-title-l: 600 1.5rem/1.2 var(--font-heading);
   --type-title-s: 600 0.8125rem/1.2 var(--font-body);
@@ -98,6 +99,17 @@ pre {
 
 a {
   color: var(--text-link);
+
+  &.external:after {
+    display: inline-flex;
+    width: 10px;
+    height: 10px;
+    margin-left: 4px;
+    background-color: var(--icon-primary);
+    mask-image: url("./assets/icons/external.svg");
+    mask-size: cover;
+    content: "";
+  }
 }
 
 /* Scrollbar customizations */
